# factorizer

./: README.md  demo.py  pyonmttok_wrapper.py  pyproject.toml  requirements.txt
factored_tokenizer/: __init__.py  demo.py  factored_tokenizer.py  test_constrgen.py
factored_tokenizer/lemmatizer/: __init__.py
factored_tokenizer/lib/: lgmf_bg.lex  lgmf_ca.lex  lgmf_en.lex  lgmf_es.lex  lgmf_fi.lex  lgmf_fr.lex  lgmf_fy.lex  lgmf_hu.lex  lgmf_id.lex  lgmf_it.lex  lgmf_pl.lex  lgmf_pt.lex  lgmf_ro.lex  lgmf_ru.lex  lgmf_sr.lex  lgmf_tr.lex
factorizer/: __init__.py  factorizer.py  patterns.py  types.py
lib/: lgmf_cs.lex  lgmf_de.lex  lgmf_et.lex  lgmf_hr.lex  lgmf_idR.lex  lgmf_ja.lex  lgmf_lt.lex  lgmf_lv.lex  lgmf_nl.lex  lgmf_no.lex  lgmf_sk.lex  lgmf_sl.lex  lgmf_sv.lex
scripts/: spm2fsv.py
tests/: test.py
tests/data/: test  test.detok  test.tok
tests/models/: csen-lowered.spm  test.spm
utils/: lemmatizer.py
