[tool.poetry]
name = "factored-tokenizer"
version = "0.1.0"
description = ""
authors = ["Maksim Tikhonov <maksimt@lingea.net>"] 

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pyonmttok = "^1.37.1"
tqdm = "^4.66.1"
multipledispatch = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
