[tool.poetry]
name = "factorizer"
version = "0.1.0"
description = ""
authors = ["Maksim Tikhonov <maksimt@lingea.net>"]
readme = "README.md"
packages = [{include = "factorizer"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pyonmttok = "^1.37.1"
tqdm = "^4.66.1"
click = "^8.1.7"
regex = "^2024.9.11"
sentencepiece = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
factorizer  = "factorizer.factorizer:cli"
